# summit_simulator

./: CMakeLists.txt  README.md  package.xml  thirdparty.repos
.github/workflows/: jazzy.yaml
config/: summit.rviz  summit_xl_base.xacro  summit_xl_base.yaml
launch/: robot_gazebo.launch.py  robot_simulation.launch.py  robotnik_base_sim.launch.py  robotnik_sensors_sim.xml  twist_mux.launch.py
robots/: summit_xl_std.urdf.xacro
rviz/: params.yaml  summit.rviz  twist_mux.yaml
urdf/: ros2_control.urdf.xacro
